--- a/.gitignore
+++ b/.gitignore
@@ -68,12 +68,14 @@ pfe/__init__.py
 pfe/asgi.py
 pfe/settings.py
 pfe/wsgi.py
+pfe/MyProject-5da545ed8d65.json
 manage.py
-
+MyProject-5da545ed8d65.json
 #Pychrm staff:
 pfe/.idea
 .idea/
 migrate.bat
+run.bat
 
 # Flask stuff:
 instance/
