--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ pfe/wsgi.py
 pfe/MyProject-5da545ed8d65.json
 manage.py
 MyProject-5da545ed8d65.json
+protocole/
+
 #Pychrm staff:
 pfe/.idea
 .idea/
